--- a/src/main/resources/application04.properties
+++ b/src/main/resources/application04.properties
@@ -1,7 +1,7 @@
 # shardingjdbc分片策略
 # 配置数据源，给数据源起名称,
 # 水平分库，配置两个数据源
-spring.shardingsphere.datasource.names=m1,m2,m0,s0
+spring.shardingsphere.datasource.names=m1,m2,m0
 
 # 一个实体类对应两张表，覆盖
 spring.main.allow-bean-definition-overriding=true
@@ -20,7 +20,7 @@ spring.shardingsphere.datasource.m2.url=jdbc:mysql://localhost:3306/edu_db_2?ser
 spring.shardingsphere.datasource.m2.username=root
 spring.shardingsphere.datasource.m2.password=root
 
-# user_db主服务器
+
 #配置第三个数据源具体内容，包含连接池，驱动，地址，用户名和密码
 spring.shardingsphere.datasource.m0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.m0.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -28,28 +28,14 @@ spring.shardingsphere.datasource.m0.url=jdbc:mysql://localhost:3306/user_db?serv
 spring.shardingsphere.datasource.m0.username=root
 spring.shardingsphere.datasource.m0.password=root
 
-# user_db从服务器
-#配置第三个数据源具体内容，包含连接池，驱动，地址，用户名和密码
-spring.shardingsphere.datasource.s0.type=com.alibaba.druid.pool.DruidDataSource
-spring.shardingsphere.datasource.s0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.s0.url=jdbc:mysql://localhost:3307/user_db?serverTimezone=GMT%2B8
-spring.shardingsphere.datasource.s0.username=root
-spring.shardingsphere.datasource.s0.password=root
-
-# 主库从库逻辑数据源定义 ds0为user_db
-spring.shardingsphere.sharding.master-slave-rules.ds0.master-data-source-name=m0
-spring.shardingsphere.sharding.master-slave-rules.ds0.slave-data-source-names=s0
-
-# 配置user_db数据库里面t_user 专库专表
-#spring.shardingsphere.sharding.tables.t_user.actual-data-nodes=m$->{0}.t_user
-# t_user分表策略，固定分配至ds0的t_user真实表
-spring.shardingsphere.sharding.tables.t_user.actual-data-nodes=ds0.t_user
-
-
 # 配置公共表
 spring.shardingsphere.sharding.broadcast-tables=t_udict
 spring.shardingsphere.sharding.tables.t_udict.key-generator.column=dictid
 spring.shardingsphere.sharding.tables.t_udict.key-generator.type=SNOWFLAKE
+
+
+# 配置user_db数据库里面t_user 专库专表
+spring.shardingsphere.sharding.tables.t_user.actual-data-nodes=m$->{0}.t_user
 
 # 指定t_user表里面主键cid 生成策略  SNOWFLAKE
 spring.shardingsphere.sharding.tables.t_user.key-generator.column=user_id
